# shortcut-overlay

./: .travis.yml  README.md  meson.build
.github/workflows/: gettext.yml  main.yml
data/: Application.css  application.css  io.elementary.shortcut-overlay.desktop.in  io.elementary.shortcut-overlay.gresource.xml  meson.build  shortcut-overlay.appdata.xml.in  shortcut-overlay.desktop.in  shortcut-overlay.gresource.xml  shortcut-overlay.metainfo.xml.in
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+172 more)
po/extra/: POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+170 more)
src/: Application.vala  Entries.vala  MainWindow.vala  ShortcutEntry.vala  ShortcutLabel.vala
src/Views/: ComposeView.vala  ShortcutsView.vala
